src/objects/ER_Group_of_Stores__c.object
<CustomObject>
    <fields>
        <fullName>ER_City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ER_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <type>TextArea</type>
    </fields>
    <label>Group of Stores</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ER_Street__c</columns>
        <columns>ER_Zip_Code__c</columns>
        <columns>ER_City__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Group of Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups of Stores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>